1999-12-30  Herman A.J. ten Brugge  <Haj.Ten.Brugge@net.HCC.nl>

        * genrecog.c (change_state) Corrected typo.

1999-12-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* system.h (bcopy, bcmp, bzero, index, rindex, atof, atol, free,
	getcwd, getenv, getwd, sbrk, strstr, malloc, calloc, realloc,
	strerror, getrlimit, setrlimit, abort): Add prototype arguments.

1999-12-30  Bernd Schmidt  <bernds@cygnus.co.uk>

	* i386.c (ix86_expand_fp_compare): In non-sahf non-TARGET_IEEE
	case, expand GT comparisons correctly.  Fix a comment before this
	part of the code.

1999-12-30  Gabriel Dos Reis  <dosreis@cmla.ens-cachan.fr>

	* dwarfout.c: Include "frame.h"	
	* dwarf2out.c: Likewise.
	* Makefile.in (dwarfout.o): Depend on frame.h
	(dwarf2out.o): Likewise.

1999-12-29  "Martin v. Loewis" <martin@loewis.home.cs.tu-berlin.de>

	Restore i386 binary compatibility in Dwarf EH info.
	* config/i386/i386.h (DWARF_FRAME_REGISTERS): Define as 17, the old
	value of FIRST_PSEUDO_REGISTER.
	* frame.h (DWARF_FRAME_REGISTERS): Default to FIRST_PSEUDO_REGISTER.
	(struct frame_state): Use DWARF_FRAME_REGISTERS.
	* dwarfout.c (output_reg_number): Ditto.
	* dwarf2out.c (reg_number, expand_builtin_init_dwarf_reg_sizes): Ditto.
	(DWARF_FRAME_RETURN_COLUMN): Default to DWARF_FRAME_REGISTERS.

1999-12-29  Bruce Korb  <autogen@linuxbox.com>

	* fixinc/fixincl.c(wait_for_pid): sometimes a WSTOPSIG of zero is OK
	* fixinc/fixincl.tpl(<hack>TEST_CT): Just do the existence test once
	(<hack>_RE_CT): not needed
	* fixinc/fixlib.c(is_cxx_header): moved from fixtests.c
	rewritten to scan the file text once only
	"template<..." test added
	* fixinc/fixlib.h(apply_fix_p_t): moved from fixtests.c
	(is_cxx_header): declaration added
	* fixinc/fixtests.c(is_cxx_header): removed
	(apply_fix_p_t): removed
	(double_slash_test): is_cxx_header is only called once now
	* fixinc/hackshell.tpl: indexing the fixes is now done under DEBUG
	* fixinc/inclhack.def(FIXINC_DEBUG): added for testing DEBUG state